--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "repository": "https://github.com/PlayMa256/schema-normalizer",
-  "main": "main.cjs.js",
+  "main": "dist/main.cjs.js",
+  "jsnext:main": "dist/main.es.js",
+  "module": "dist/main.es.js",
   "scripts": {
-    "build": "rollup -c ./rollup.config.js"
+    "build": "cross-env NODE_ENV=production rollup -c ./rollup.config.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,7 @@
     "babel-preset-env": "1.6.1",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "3.0.3",
-    "rollup-plugin-uglify": "3.0.0"
+    "rollup-plugin-uglify": "3.0.0",
+    "cross-env": "^5.1.4"
   }
 }
